[metadata]
name = pyscourtools
version = 0.0.1
author = Seyed Abbas Jazaeri
author_email = s.a.jazaeri@uottawa.ca
description = Useful tools to analyze dam break scour tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sajazaeri/pyscourtools
classifiers = 
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS  Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
